2012-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el: Add coding cookie for a soft hyphen that mm-shr uses.

2012-06-25  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-request-articles-find-limit): Rename from
	`nnimap-request-move-articles-find-limit' since we do not use it only
	for move operations.
	(nnimap-request-accept-article): Use
	`nnimap-request-articles-find-limit' to limit search by message-id.

2012-06-22  Paul Eggert  <eggert@cs.ucla.edu>

	Support higher-resolution time stamps (Bug#9000).

	* time-date.el (with-decoded-time-value): New arg PICO-SYMBOL in
	VARLIST.  It's optional, for backward compatibility.
	(encode-time-value): New optional arg PICO.  New type 3.
	(time-to-seconds) [!float-time]: Support the new picoseconds
	component if it's used.
	(seconds-to-time, time-subtract, time-add):
	Support ps-resolution time stamps as well.

2012-06-19  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-run-imap): Fix, use `nnimap-change-group'.

	* nnimap.el (nnimap-log-buffer): Check that
	`window-point-insertion-type' is boundp, since it's not available in
	XEmacs.

2012-06-19  Michael Welsh Duggan  <md5i@md5i.com>  (tiny change)

	* nnimap.el (nnimap-log-buffer): Add this, setting
	`window-point-insertion-type' in the buffer to t.
	(nnimap-log-command): Use nnimap-log-buffer.

2012-06-19  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-find-article-by-message-id): Add an optional limit
	argument to be able to limit the search.
	(nnimap-request-move-article): Use `nnimap-request-move-articles-find-limit'.
	(nnimap-request-move-articles-find-limit): Add this to limit the search
	by Message-Id after a message move.
	(nnimap): Add defgroup.

2012-06-18  Nelson Ferreira  <nelson.ferreira@ieee.org>  (tiny change)

	* gnus-win.el (gnus-configure-frame): Pass an arg to window-dedicated-p.

2012-06-15  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-find-article-by-message-id): Use